--- a/css/logoin-1.css
+++ b/css/logoin-1.css
@@ -8,6 +8,155 @@ body{
     position: fixed;
     top: 0px;
     left: 0;
+    z-index: 20000;
+    width: 100%;
+}
+.mainnav .logo .pic{
+    width: 40px;
+    height: 40px;
+    padding: 0 30px;
+}
+.mainnav .logo img{
+    width: 100%;
+    
+}
+.mainnav h1{
+    font-size: 16px;
+}
+
+
+.mainnav .container{
+    display: flex;
+    height: px;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(245, 241, 241);
+}
+
+.mainnav .logo{
+    display: flex;
+  
+    align-items: center;
+}
+.mainnav .navbar{
+    display: flex;
+    
+}
+.mainnav .navbar a{
+    text-decoration: none;
+
+}
+.mainnav .navbar :hover{
+    text-decoration: none;
+    color:rgb(255, 204, 36);
+    
+}
+.mainnav .navbar li{
+    padding: 0 20px;
+   
+}
+.mainnav .navbar li :hover{
+    color:rgb(255, 204, 36);
+   
+}
+
+.mainnav .login{
+    display: flex;
+    
+    
+}
+
+.mainnav .login li{
+    padding:0 10px;
+    margin: 0 5px ;
+}
+
+.mainnav .login a{
+    color: gray;
+    text-decoration: none;
+}
+.mainimg .container{
+    /* width: 1200px; */
+    margin: auto;
+    position: relative;
+    margin-top: 100px;
+   
+}
+.mainimg .container .txt{
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    font-weight: 900;
+    transform: translate(0%,-50%);
+}
+.mainimg .container .txt button{
+    background-color:#ffb000;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-top: 30px;
+    color: white;
+    border: none;
+    font-size: 20px;
+    font-weight: 900;
+    cursor: pointer;
+    
+}
+.mainimg .container .txt button:hover{
+    color:rgb(0, 0, 0);
+   background-color: rgb(255, 255, 255);
+}
+
+.mainimg .container .txt-1{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    font-weight: 900;
+    transform: translate(0%,-50%);
+}
+.mainimg .container .txt-1 button{
+    background-color:#999b99d3;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-top: 30px;
+    color: white;
+    border: none;
+    font-size: 20px;
+    font-weight: 900;
+    cursor: pointer;
+
+}
+.mainimg h2{
+    font-size: 40px;
+    padding: 30px 0px;
+}
+.mainimg p {
+    font-size: 24px;
+}
+
+.maingimg{
+    margin: auto;
+    width: 100vw;
+    
+
+}
+
+.mainimg .container img{
+    width: 100%;
+    height: 500px;
+   object-fit: cover;
+   opacity: 0.9;
+   
+}body{
+    position: relative;
+}
+.mainnav{
+    background-color:white ;
+    box-shadow: #aaa 1px 1px 1px;
+    font-family: 'IBM Plex Sans Thai Looped', sans-serif;
+    position: fixed;
+    top: 0px;
+    left: 0;
     z-index: 2;
     width: 100%;
 }
@@ -110,8 +259,6 @@ body{
     width: 100%;
     height: 500px;
     object-fit: cover;
-}
-   
 }
 
 .mainimg .container .pic-1{
@@ -1340,6 +1487,9 @@ vertical-align: bottom;
   font-size: 14px;
 }
 
+.personal .container >h2{
+    
+}
 
 
 .loanbanner-1 {
@@ -1501,4 +1651,71 @@ vertical-align: bottom;
     border-radius: 30px;
     }
 
+
+.vip{
+        margin-top: 60px;
+}
+.vip .container{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+}
+.vip .item-left{
+    width: 50%;
+    border: red 3px solid
+}
+
+.vip .container .pic{
+    width:100%
+
+}
+.vip .item-left .pic img{
+    width: 100%;
+}
+
+.vip .item-right{
+    width: 50%;
+    border: red 3px solid
+}
+.item-right{;
+}
+
+.little {
+    margin-top: 60px;
+    background-color: rgb(197, 197, 197);
+}
+.little .container{
+    width: 1200px;
+    margin: auto;
+    display: flex;
+    height: 500px;
    
+}
+.little .container .item{
+    width: 70%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    border: #009d97 solid 3px;
+    
+
+    
+    justify-content: right;
+   
+}
+.little .container .item .pic{
+    width: 150px;
+}
+.little .container .item .pic img{
+    width: 100%;
+}
+.little .container .item-1{
+   width:600px;
+   border: #009d97 solid 3px;
+
+}
+.little .container .item .are{
+    width: 40%;
+    border: #009d97 solid 3px;
+    justify-content: space-between;
+}
