--- a/css/vip.css
+++ b/css/vip.css
@@ -83,9 +83,8 @@ body{
     margin-top: 100px;
    
 }
-.mainimg .container .txt p{
-    background-color: gray;
-}
+
+
 .mainimg .container .txt{
     position: absolute;
     top: 50%;
@@ -744,7 +743,7 @@ body{
 .Product-Detail-Page .txt h1{
     font-size: 26px;
     font-weight: 500;
-    mra
+
 }
 .Product-Detail-Page .txt{
     text-align: center;
@@ -1641,7 +1640,7 @@ vertical-align: bottom;
 
 
 .vip{
-        margin-top: 60px;
+     margin-top: 60px;
 }
 .vip .container{
     width: 1200px;
@@ -1650,19 +1649,19 @@ vertical-align: bottom;
 }
 .vip .item-left{
     width: 40%;
-    border: red 3px solid;
     --swiper-theme-color: #007aff;
     --swiper-navigation-size: 44px;
     font-size: 100%;
     font-weight: normal;
     word-wrap: break-word;
     font-family: 'Noto Sans TC', sans-serif;
-    margin: 0;
+    margin-bottom:-100px;
     line-height: normal;
     background-color: #e4cc65;
     color: rgba(255, 255, 255, 0.6);
     padding: 10px 30px;
 }
+
 .vip .item-left h1{
     --swiper-theme-color: #007aff;
     --swiper-navigation-size: 44px;
@@ -1697,7 +1696,6 @@ vertical-align: bottom;
 .vip .item-right h3{
     --swiper-theme-color: #007aff;
     --swiper-navigation-size: 44px;
- 
     padding: 0;
     font-family: 'Noto Serif TC', serif;
     line-height: 45px;
@@ -1706,12 +1704,10 @@ vertical-align: bottom;
     font-size: 20px;
    
 }
-.vip .item-right h3{{
 
-}
 
 .vip .container .pic{
-    width: 50px;
+    width: 700px;
 
 }
 .vip .item-left .pic img{
@@ -1719,10 +1715,21 @@ vertical-align: bottom;
 }
 
 .vip .item-right{
-    width: 60%;
-    border: red 3px solid
+    width: 40%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    }
+.vip {
+    display: flex;
 }
 
+.vip .container .item-right  p,
+.vip .container .item-right  h4{
+    font-size: 16px;
+    color: rgb(0, 76, 78);
+    line-height: 2;
+}
 
 
 .little {
@@ -1745,8 +1752,12 @@ vertical-align: bottom;
     justify-content: right;
    
 }
+.little .container .are h2{
+    margin: 30px;
+   
+}
 .little .container .item .pic{
-    width: 150px;
+    width: 200px;
 }
 .little .container .item .pic img{
     width: 100%;
@@ -1789,3 +1800,48 @@ vertical-align: bottom;
     margin-top: 15px;
     opacity: 0.8;
 }
+
+
+.mainimg .container button:hover{
+    text-decoration: none;
+    color:rgb(2, 2, 2);
+    background: orange;
+    
+}
+    .mainnav .container .login h2:hover{
+            text-decoration: none;
+            color:rgb(2, 2, 2);
+            background: orange;
+            
+        }
+        .mainnav .container .login a:hover{
+            text-decoration: none;
+            color:rgb(2, 2, 2);
+            background: orange;
+            
+        }
+        .news .container .item .newsproduct .more h2:hover{
+                
+                color:rgb(19, 18, 18);
+                cursor: pointer; 
+            }
+
+        .product-list .container .item-60 a:hover{
+                color: black;
+                cursor: pointer; 
+        }
+        .imgbottom .banner .container a:hover{
+            color: rgb(8, 247, 247);
+                cursor: pointer; 
+                border: rgb(8, 247, 247) 1px solid;
+        }
+        .fotter-1 .container .item .ecoutmer a:hover{
+            color: orange;
+        }
+        .fotter-1 .container .item .ecoutmer-1 a:hover{
+            color: orange;
+        }
+        .fotter-1 .container .item .wrap .ecoutmer-2 a:hover{
+            color: orange;
+        
+        }
